--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <section id="container">
         <h1>FELIZ ANIVERSÁRIO MEU AMOR!!!</h1>
         <hr>
+        <p>Parabéns por mais um ano de vida princesa!! Agora já fazem 27 anos em que você veio ao mundo para nos iluminar com sua graça, carisma e amor. Você é uma pessoa muito especial, não conheço ninguém que seja tão meiga e amorosa, uma pessoa com enorme coração.</p>
+        <p>Ainda bem que você veio para este mundo, pois graças a isso tive a honra de conhecer a paixão da minha vida, minha cara metade, minha companheira, </p>
         
     </section>
     
