--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <section id="container">
         <h1>FELIZ ANIVERSÁRIO MEU AMOR!!!</h1>
         <hr>
-        <p>Parabéns por mais um ano de vida princesa!! Agora já fazem 27 anos em que você veio ao mundo para nos iluminar com sua graça, carisma e amor. Você é uma pessoa muito especial, não conheço ninguém que seja tão meiga e amorosa, uma pessoa com enorme coração.</p>
-        <p>Ainda bem que você veio para este mundo, pois graças a isso tive a honra de conhecer a paixão da minha vida, minha cara metade, minha companheira, </p>
+        <p>Parabéns por mais um ano de vida princesa!! Agora já fazem 27 anos que você veio ao mundo para nos iluminar com sua graça, carisma e amor. Você é uma pessoa muito especial, não conheço ninguém que seja tão meiga e amorosa, uma pessoa com enorme coração.</p>
+        <p>Em 2014 tive a honra de te conhecer, já fazem quase 10 anos juntos. Durante este período você sempre esteve comigo, seja nos bons momentos ou nos ruins. Sempre me dando forçar e tendo paciencia com os meus egosimos e infantilidades. </p>
+        <p>Valorizo demais a sua garra! Super responsável, leva seu trabalho a sério, uma excelente profissional. E mesmo trabalhando tanto, sempre tem forças para ajudar em casa e sorrir.</p>
+        <p>Valorizo sua empatia com o próximo, sempre prestando atenção e querendo o bem de todos!</p>
+        <p>TE AMO a cada dia mais, e torço para estar com você todos os dias da minha vida!!</p>
         
     </section>
     
